--- a/core-ui/src/main/res/values-v23/styles.xml
+++ b/core-ui/src/main/res/values-v23/styles.xml
@@ -16,5 +16,8 @@
         <item name="android:windowBackground">@color/colorWhite</item>
         <item name="android:colorBackground">@color/colorWhite</item>
         <item name="android:windowLightStatusBar">true</item>
+
+        <item name="bottomSheetDialogTheme">@style/BottomSheetDialogTheme</item>
+        <item name="bottomSheetStyle">@style/BottomSheetDialogTheme</item>
     </style>
 </resources>
