--- a/feature-alarm-ui/src/main/res/layout/fragment_alarm.xml
+++ b/feature-alarm-ui/src/main/res/layout/fragment_alarm.xml
@@ -1,17 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:theme="@style/AppTheme">
 
-    <TextView
-        android:text="Hello world!"
-        style="@style/AppTheme.Text.Title.H3"
-        android:layout_width="wrap_content"
+    <com.booleanull.core_ui.widget.PulseView
+        android:id="@+id/pulseView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/large_margin"
+        android:layout_marginEnd="@dimen/large_margin"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/alarmImageView"
+        android:layout_width="72dp"
+        android:layout_height="@dimen/icon_background_size"
+        android:src="@drawable/shape_circle"
+        android:tint="?attr/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:layout_width="@dimen/icon_cell_size"
+        android:layout_height="@dimen/icon_cell_size"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_baseline_alarm"
+        android:tint="?attr/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/iconImageView"
+        android:layout_width="@dimen/icon_cell_size"
+        android:layout_height="@dimen/icon_cell_size"
+        android:layout_marginBottom="@dimen/small_margin"
+        app:layout_constraintBottom_toTopOf="@id/applicationTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:src="@drawable/shape_circle" />
+
+    <TextView
+        android:id="@+id/applicationTextView"
+        style="@style/AppTheme.Text.Title.H4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/large_margin"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="@string/app_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
